--- a/djangoproject/gestion_stock/templates/bonLivraisonEntreeadd.html
+++ b/djangoproject/gestion_stock/templates/bonLivraisonEntreeadd.html
@@ -338,7 +338,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <button class="btn btn-sm btn-dark" id="addligne">+</button>
+                            <button class="btn btn-sm btn-dark" id="addligne" disabled>+</button>
                         </div>
                     </div>
                 </div>
@@ -354,6 +354,7 @@
 </div>
 <br>
 <br>
+
 <script>
     $(document).ready(function() {
         $("#back-row").click( function() {
