--- a/djangoproject/gestion_stock/templates/clientadd.html
+++ b/djangoproject/gestion_stock/templates/clientadd.html
@@ -1,7 +1,7 @@
-{% extends "base_generic.html" %}
+{% extends user.is_authenticated|yesno:"base_generic.html,empty.html" %}
 
 {% block content %}
-
+<html>
 <style>
     .ui-dialog-titlebar-close {
         visibility: hidden;
@@ -64,12 +64,12 @@
                             "{% for items in typez %}"
                             //console.log("{{ items.nom }}");
                             //to change
-                            var name = "{{ items.nom }}";
+                            var name = "{{ items.nom|escapejs }}";
                             var oldname;
                             if (i == 0)
-                                $("#zonetype").append(new Option("{{ items.nom }}", "{{ items.nom }}"));
+                                $("#zonetype").append(new Option("{{ items.nom|escapejs }}", "{{ items.nom|escapejs }}"));
                             else if (name != oldname)
-                                $("#zonetype").append(new Option("{{ items.nom }}", "{{ items.nom }}"));
+                                $("#zonetype").append(new Option("{{ items.nom|escapejs }}", "{{ items.nom|escapejs }}"));
                             oldname = name;
                             i = 1;
                             "{% endfor %}"
@@ -87,12 +87,12 @@
                             "{% for items in typed %}"
                             //console.log("{{ items.nom }}");
                             //to change
-                            var name = "{{ items.nom }}";
+                            var name = "{{ items.nom|escapejs }}";
                             var oldname;
                             if (i == 0)
-                                $("#destitype").append(new Option("{{ items.nom }}", "{{ items.nom }}"));
+                                $("#destitype").append(new Option("{{ items.nom|escapejs }}", "{{ items.nom|escapejs }}"));
                             else if (name != oldname)
-                                $("#destitype").append(new Option("{{ items.nom }}", "{{ items.nom }}"));
+                                $("#destitype").append(new Option("{{ items.nom|escapejs }}", "{{ items.nom|escapejs }}"));
                             oldname = name;
                             i = 1;
                             "{% endfor %}"
@@ -113,9 +113,9 @@
                             var name = "{{ items.nom }}";
                             var oldname;
                             if (i == 0)
-                                $("#fournitype").append(new Option("{{ items.nom }}", "{{ items.nom }}"));
+                                $("#fournitype").append(new Option("{{ items.nom|escapejs }}", "{{ items.nom|escapejs }}"));
                             else if (name != oldname)
-                                $("#fournitype").append(new Option("{{ items.nom }}", "{{ items.nom }}"));
+                                $("#fournitype").append(new Option("{{ items.nom|escapejs }}", "{{ items.nom|escapejs }}"));
                             oldname = name;
                             i = 1;
                             "{% endfor %}"
@@ -136,9 +136,9 @@
                             var name = "{{ items.nom }}";
                             var oldname;
                             if (i == 0)
-                                $("#typearticle").append(new Option("{{ items.nom }}", "{{ items.nom }}"));
+                                $("#typearticle").append(new Option("{{ items.nom|escapejs }}", "{{ items.nom|escapejs }}"));
                             else if (name != oldname)
-                                $("#typearticle").append(new Option("{{ items.nom }}", "{{ items.nom }}"));
+                                $("#typearticle").append(new Option("{{ items.nom|escapejs }}", "{{ items.nom|escapejs }}"));
                             oldname = name;
                             i = 1;
                             "{% endfor %}"
@@ -172,17 +172,6 @@
                             </tr>
                             </thead>
                             <tbody>
-                            {% for items in trans %}
-                            <tr>
-                                <td> <button id='{{ items.idTransporteur }}' class="dyna"> -> </button></td>
-                                <td> {{ items.nom }} </td>
-                            </tr>
-                            {% empty %}
-                            <tr>
-                                <td>  </td>
-                                <td> Empty </td>
-                            </tr>
-                            {% endfor %}
                             </tbody>
                         </table>
 
@@ -200,17 +189,6 @@
                             </tr>
                             </thead>
                             <tbody>
-                            {% for items in trans %}
-                            <tr>
-                                <td> <button id='{{ items.idTransporteur }}' class="dyna"> -> </button></td>
-                                <td> {{ items.nom }} </td>
-                            </tr>
-                            {% empty %}
-                            <tr>
-                                <td>  </td>
-                                <td> Empty </td>
-                            </tr>
-                            {% endfor %}
                             </tbody>
                         </table>
                     </div>
@@ -228,17 +206,6 @@
                             </tr>
                             </thead>
                             <tbody>
-                            {% for items in trans %}
-                            <tr>
-                                <td> <button id='{{ items.idTransporteur }}' class="dyna"> -> </button></td>
-                                <td> {{ items.nom }} </td>
-                            </tr>
-                            {% empty %}
-                            <tr>
-                                <td>  </td>
-                                <td> Empty </td>
-                            </tr>
-                            {% endfor %}
                             </tbody>
                         </table>
                     </div>
@@ -453,156 +420,11 @@
         $("#nom").change(function () {
             console.log( $(this).val() );
         });
-    });
-
-    $('#post-form').on('submit', function(event){
-        event.preventDefault();
-        console.log("form submitted!")  // sanity check
-        create_post();
-    });
-    function create_post() {
-        console.log("create post is working!") // sanity check
-        console.log($('#post-text').val())
-    };
-
-
-    $(function() {
-        $(".ui-widget").click( function() {
-            var val = $('#combobox2').val();
-            var destinat = $('#combobox2').find(":selected").text();
-            "{% for items in sortie %}"
-            if ('{{ items.fk_Destinataire.nom }}' == destinat)
-                $("#umid").val('{{ items.fk_Destinataire.codeUM }}');
-            "{% endfor %}"
-        });
-
-        $.widget( "custom.combobox", {
-            _create: function() {
-                this.wrapper = $( "<span>" )
-                    .addClass( "custom-combobox" )
-                    .insertAfter( this.element );
-
-                this.element.hide();
-                this._createAutocomplete();
-                this._createShowAllButton();
-            },
-
-            _createAutocomplete: function() {
-                var selected = this.element.children( ":selected" ),
-                    value = selected.val() ? selected.text() : "";
-
-                this.input = $( "<input>" )
-                    .appendTo( this.wrapper )
-                    .val( value )
-                    .attr( "title", "" )
-                    .addClass( "custom-combobox-input ui-widget ui-widget-content ui-state-default ui-corner-left" )
-                    .autocomplete({
-                        delay: 0,
-                        minLength: 0,
-                        source: $.proxy( this, "_source" )
-                    })
-                    .tooltip({
-                        classes: {
-                            "ui-tooltip": "ui-state-highlight"
-                        }
-                    });
-
-
-                this._on( this.input, {
-                    autocompleteselect: function( event, ui ) {
-                        ui.item.option.selected = true;
-                        this._trigger( "select", event, {
-                            item: ui.item.option
-                        });
-                    },
-                    autocompletechange: "_removeIfInvalid"
-                });
-            },
-
-            _createShowAllButton: function() {
-                var input = this.input,
-                    wasOpen = false;
-
-                $( "<a>" )
-                    .attr( "tabIndex", -1 )
-                    .attr( "title", "Show All Items" )
-                    .tooltip()
-                    .appendTo( this.wrapper )
-                    .button({
-                        icons: {
-                            primary: "ui-icon-triangle-1-s"
-                        },
-                        text: false
-                    })
-                    .removeClass( "ui-corner-all" )
-                    .addClass( "custom-combobox-toggle ui-corner-right" )
-                    .on( "mousedown", function() {
-                        wasOpen = input.autocomplete( "widget" ).is( ":visible" );
-                    })
-                    .on( "click", function() {
-                        input.trigger( "focus" );
-                        // Close if already visible
-                        if (wasOpen) {
-                            return;
-                        }
-                        // Pass empty string as value to search for, displaying all results
-                        input.autocomplete( "search", "" );
-                    });
-            },
-
-            _source: function( request, response ) {
-                var matcher = new RegExp( $.ui.autocomplete.escapeRegex(request.term), "i" );
-                response( this.element.children( "option" ).map(function() {
-                    var text = $( this ).text();
-                    if ( this.value && ( !request.term || matcher.test(text) ) )
-                        return {
-                            label: text,
-                            value: text,
-                            option: this
-                        };
-                }) );
-            },
-
-            _removeIfInvalid: function( event, ui ) {
-
-                // Selected an item, nothing to do
-                if ( ui.item ) {
-                    return;
-                }
-
-                // Search for a match (case-insensitive)
-                var value = this.input.val(),
-                    valueLowerCase = value.toLowerCase(),
-                    valid = false;
-                this.element.children( "option" ).each(function() {
-                    if ( $( this ).text().toLowerCase() === valueLowerCase ) {
-                        this.selected = valid = true;
-                        return false;
-                    }
-                });
-
-                // Found a match, nothing to do
-                if ( valid ) {
-                    return;
-                }
-
-                // Remove invalid value
-                this.input
-                    .val( "" )
-                    .attr( "title", value + " didn't match any item" )
-                    .tooltip( "open" );
-                this.element.val( "" );
-                this._delay(function() {
-                    this.input.tooltip( "close" ).attr( "title", "" );
-                }, 2500 );
-                this.input.autocomplete( "instance" ).term = "";
-            },
-
-            _destroy: function() {
-                this.wrapper.remove();
-                this.element.show();
-            },
-        });
+        $("#destitype").val("");
+        $("#paysid").val("");
+        $("#zonetype").val("");
+        $("#fournitype").val("");
+        $("#typearticle").val("");
 
         $("#destitype").combobox();
         $("#paysid").combobox();
@@ -616,8 +438,8 @@
             $("#destitype").toggle();
             $("#paysid").toggle();
         });
+
     });
-
 </script>
-
+</html>
 {% endblock %}
