--- a/djangoproject/gestion_stock/templates/unitemanutentionentree.html
+++ b/djangoproject/gestion_stock/templates/unitemanutentionentree.html
@@ -46,27 +46,42 @@
                     <thead>
                     <tr>
                         <th scope="col" class="th-sm"> modify </th>
-                        <th scope="col" class="th-sm"> nom </th>
+                        <th scope="col" class="th-sm"> emplacement </th>
+                        <th scope="col" class="th-sm"> type zone </th>
+                        <th scope="col" class="th-sm"> n° BL </th>
+                        <th scope="col" class="th-sm"> date création </th>
+                        <th scope="col" class="th-sm"> date réception </th>
+                        <th scope="col" class="th-sm"> identifiant </th>
+                        <th scope="col" class="th-sm"> stock </th>
                         <th scope="col" class="th-sm"> delete </th>
                     </tr>
                     </thead>
                     <tbody>
-                    {% for items in cli %}
+                    {% for items in ume %}
                     <tr>
-                        <td> <button id='{{ items.idClient }}' class="dyna"> -> </button></td>
-                        <td> {{ items.nom }} </td>
-                        <td> <button id='{{ items.idClient }}' class="dynad"> X </button> </td>
+                        <td> <button id='{{ items.idUniteManutentionEntree }}' class="dyna"> -> </button></td>
+                        <td> {{ items.fk_ZoneDepot.nom }} </td>
+                        <td> {{ items.fk_TypeZoneDepot.nom }} </td>
+                        <td> {{ items.fk_BonLivraisonEntree.numeroBonLivraison }} </td>
+                        <td> {{ items.c_horodatage }} </td>
+                        <td> {{ items.dateReception }} </td>
+                        <td> {{ items.idUniteManutentionEntree }} </td>
+                        <td> {{ items.stock }} </td>
+                        <td> <button id='{{ items.idUniteManutentionEntree }}' class="dynad"> X </button> </td>
                     </tr>
                     {% endfor %}
                     </tbody>
                     <tfoot>
                     <tr>
-                        <th> modify
-                        </th>
-                        <th>nom
-                        </th>
-                        <th>delete
-                        </th>
+                        <th>modify </th>
+                        <th>emplacement </th>
+                        <th>type zone </th>
+                        <th>n° BL </th>
+                        <th>date création </th>
+                        <th>date réception </th>
+                        <th>identifiant </th>
+                        <th>stock </th>
+                        <th>delete </th>
                     </tr>
                     </tfoot>
                 </table>
@@ -90,13 +105,13 @@
             var name = "";
             var trueid = 0;
             alert(idClicked);
-            "{% for items in cli %}"
-            if ('{{ items.idClient }}' == idClicked) {
+            "{% for items in ume %}"
+            if ('{{ items.idUniteManutentionEntree }}' == idClicked) {
                 name = '{{ items.nom }}';
                 trueid = '{{ items.id }}';
             }
             "{% endfor %}"
-            window.location.href = "{% url 'clientmodify' %}?id=" + idClicked + "&" + "name=" + name + "&" + "trueid=" + trueid;
+            window.location.href = "{% url 'unitemanutentionentreemodify' %}?id=" + idClicked + "&" + "name=" + name + "&" + "trueid=" + trueid;
         });
 
         $(document).on("click", "button.dynad" , function(e) { // event pour delete la ligne sélectionner
@@ -104,7 +119,7 @@
             alert(idClicked);
             $.ajax({
                 type:"POST",    //type de requête utilisé par ajax
-                url:"/delete_cli/", //lien de la view qui gère la requête post pour supprimer une entree
+                url:"/delete_ume/", //lien de la view qui gère la requête post pour supprimer une entree
                 data: {
                     'name': $('#nom').val(), // nom du transporteur récuperer dans le input #nom
                     'id': idClicked, // id du transporteur acquis grace a une incrementation en js
