--- a/djangoproject/gestion_stock/templates/transporteurmodify.html
+++ b/djangoproject/gestion_stock/templates/transporteurmodify.html
@@ -19,8 +19,9 @@
 <div class="container">
     <div class="form-group row text-center">
         <div class="col">
-            <button type="button" class="btn btn-light btn-rounded btn-outline-dark">Recherche</button>
+            <i class="fa fa-chevron-circle-left" style="font-size:45px;cursor: pointer;"></i>
         </div>
+
         <div class="col">
             <button type="button" id="back-row" class="btn btn-default btn-rounded btn-outline-dark">Tout</button>
         </div>
@@ -28,17 +29,18 @@
             <button type="button" id="create-row" class="btn btn-success btn-rounded btn-outline-dark">Ajouter</button>
         </div>
         <div class="col">
-            <button type="button" class="btn btn-default btn-rounded btn-outline-dark">Calculer</button>
+            <i class="fa fa-chevron-circle-right" style="font-size:45px;cursor: pointer;"></i>
         </div>
+
     </div>
 </div>
 
 <div class="container">
     <div class="row" style="width: auto; height: 100%;">
-        <div class="border shadow-lg p-3 mb-5 bg-white rounded" style="width: 100%; height: auto;">
+        <div class="border shadow-lg p-3 mb-5 bg-white rounded col text-center">
             <div class="row">
-                <div class="col-md-10" >
-                    <h3 class="text-center"> identification </h3>
+                <div class="col">
+                    <h3 class=""> identification </h3>
                 </div>
             </div>
             <br>
@@ -46,10 +48,10 @@
             <form action="/create_trans/" method="POST" id="post-form">
                 <br>
                 <div class="">
-                    identifiant:<br><input type="text" id="umid" name="id_transporteur" disabled>
+                    identifiant:<br><input  class="text-center" type="text" id="umid" name="id_transporteur" disabled>
                 </div>
                 <div>
-                    nom: <br><input type="text" id="nom" name="nom_transporteur">
+                    nom: <br><input class="text-center" type="text" id="nom" name="nom_transporteur">
                 </div>
                 <br>
                 <input type="button" class="btn btn-primary" id="modify" value="Save">
@@ -60,17 +62,20 @@
 
 <script>
     $(document).ready(function() {
-        console.log("{{ name }}");
-        console.log("{{ id }}");
         //alert(window.location.search.substring(1));
         $("#back-row").click( function() {
             location.href = "{% url 'transporteur' %}";
         });
         $("#umid").val('{{ id }}');
-        $("#nom").val('{{ name }}');
+        $("#nom").val('{{ name|safe }}');
+        "{% for items in trans %}"
+        if ('{{ items.idTransporteur }}' === '{{ id }}') {
+            $("#umid").val('{{ items.idTransporteur }}');
+            $("#nom").val('{{ items.nom|safe }}');
+        }
+        "{% endfor %}"
 
         $('#modify').click(function() {
-
             $.ajax({
                 type:"POST",    //type de requête utilisé par ajax
                 url:"/modify_trans/", //lien de la view qui gère la requête post
@@ -89,6 +94,45 @@
             });
 
         });
+
+        $(".fa-chevron-circle-right").click(function() {
+            $.ajax({
+                type:"POST",
+                url:"/right_trans/",
+                data: {
+                    'id': $('#umid').val(),
+                    csrfmiddlewaretoken: '{{ csrf_token }}',
+                },
+                success: function(msg, data, settings){
+                    console.log("gg " + msg);
+                    if (msg != "fail")
+                        window.location.href = "{% url 'transporteurmodify' %}?id=" +  msg;
+                },
+                failure: function() {
+                    console.log("fail");
+                }
+            });
+        });
+
+        $(".fa-chevron-circle-left").click(function() {
+            $.ajax({
+                type:"POST",
+                url:"/left_trans/",
+                data: {
+                    'id': $('#umid').val(),
+                    csrfmiddlewaretoken: '{{ csrf_token }}',
+                },
+                success: function(msg, data, settings){
+                    console.log("gg " + msg);
+                    if (msg != "fail")
+                        window.location.href = "{% url 'transporteurmodify' %}?id=" +  msg;
+                },
+                failure: function() {
+                    console.log("fail");
+                }
+            });
+        });
+
     });
 </script>
 {% endblock %}
